--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,35 @@
-Faker==18.11.1
+astroid==2.15.5
+autopep8==2.0.2
+dill==0.3.6
+docstring-to-markdown==0.12
+flake8==6.0.0
+importlib-metadata==6.7.0
+isort==5.12.0
+jedi==0.18.2
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+packaging==23.1
+parso==0.8.3
+platformdirs==3.7.0
+pluggy==1.2.0
+pycodestyle==2.10.0
+pydocstyle==6.3.0
+pyflakes==3.0.1
+pylint==2.17.4
 PySide2==5.15.2.1
 python-dateutil==2.8.2
+python-lsp-jsonrpc==1.0.0
+python-lsp-server==1.7.3
+pytoolconfig==1.2.5
+rope==1.8.0
 shiboken2==5.15.2.1
 six==1.16.0
+snowballstemmer==2.2.0
+tomli==2.0.1
+tomlkit==0.11.8
+typing_extensions==4.6.3
+ujson==5.8.0
+whatthepatch==1.0.5
+wrapt==1.15.0
+yapf==0.40.1
+zipp==3.15.0
